--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,17 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Expo
+.expo/
+.expo-shared/
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+
+# macOS
+.DS_Store
